[Xcode] Use scheme scoping to build WebKit separate from internal projects https://bugs.webkit.org/show_bug.cgi?id=292962 rdar://149564758
Reviewed by NOBODY (OOPS!).

Prepare for adoption of scheme scoping [1] in "All WebKit Tools" and the
family of "Everything up to WebKit" schemes. This setting causes Xcode
to filter the build graph to only include targets that are listed in the
active scheme [2]. For WebKit, which can build internally as part of
Safari, this change makes it so that:

- Building WebKit never pulls in part of the Safari stack, adding to
  overall build time; and
- Whether a build of WebKit uses Safari frameworks from the SDK or from
  ToT no longer depends on the active workspace.

Scheme scoping requires that all our targets are either part of the
scheme, or in an aggregate target that's part of the scheme. This means
that some targets which were only added to the build graph transitively
or implicitly must be explicit declared, usually in a project's "All"
aggregate target.

Some projects did not have an "All" aggregate target, so add it there.

[1]: We cannot use scheme scoping in public builds yet because of a bug
related to DEPENDENCY_SCOPE_INCLUDES_DIRECT_DEPENDENCIES with public
Xcode (rdar://136703410) until Xcode 16.3. Because we support older
versions, these project changes will only benefit internal-only build
configurations for now. Schemes in WebKit.xcworkspace continue to be
unscoped, and this change should not impact their build order.

* Configurations/CommonBase.xcconfig:
[2]: By default, scheme scoping does not consider dependencies of
aggregate targets to be part of the scope. This does not work for
WebKit, because we use aggregate targets to make it possible to
introduce new targets to the build without needing to update every
scheme across all workspaces. Customize this behavior by setting
DEPENDENCY_SCOPE_INCLUDES_DIRECT_DEPENDENCIES project-wide.

* Source/JavaScriptCore/JavaScriptCore.xcodeproj/project.pbxproj:
* Source/Thi

--- a/Configurations/CommonBase.xcconfig
+++ b/Configurations/CommonBase.xcconfig
@@ -76,6 +76,11 @@ OTHER_TAPI_FLAGS = $(inherited) $(WK_COMMON_OTHER_TAPI_FLAGS);
 WK_DEFAULT_WK_AUDIT_SPI[sdk=iphoneos*] = $(WK_NOT_$(USE_INTERNAL_SDK));
 WK_AUDIT_SPI = $(WK_DEFAULT_WK_AUDIT_SPI);
 
+// When building schemes in Dependency scope, include dependencies of aggregate
+// targets in the scope.
+WK_DEFAULT_DEPENDENCY_SCOPE_INCLUDES_DIRECT_DEPENDENCIES = YES;
+DEPENDENCY_SCOPE_INCLUDES_DIRECT_DEPENDENCIES = $(WK_DEFAULT_DEPENDENCY_SCOPE_INCLUDES_DIRECT_DEPENDENCIES);
+
 GCC_WARN_NON_VIRTUAL_DESTRUCTOR = YES;
 
 WK_COMMON_WARNING_CFLAGS = -Wall -Wc99-designator -Wconditional-uninitialized -Wextra -Wdeprecated-enum-enum-conversion -Wdeprecated-enum-float-conversion -Wenum-float-conversion -Wfinal-dtor-non-final-class -Wformat=2 -Wmisleading-indentation -Wpointer-to-int-cast -Wreorder-init-list -Wundef -Wunused-but-set-variable -Wvla;
